@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Widget.H,v 1.6.2.4.2.21 2003/09/04 19:07:58 easysw Exp $"
+// "$Id: Fl_Widget.H,v 1.6.2.4.2.22 2004/04/06 18:37:20 easysw Exp $"
 //
 // Widget header file for the Fast Light Tool Kit (FLTK).
 //
@@ -69,13 +69,13 @@ class FL_EXPORT Fl_Widget {
 
   const char *tooltip_;
 
-#  if defined(WIN32) && !defined(FL_DLL)
-  // "de-implement" the copy constructors, EXCEPT for when we are using the WIN32 DLL
-  // interface, in which case we can't hide them because Microsoft requires the copy
-  // constructors to implement subclassing...
+#  if !defined(WIN32) || !defined(FL_DLL)
+  // "de-implement" the copy constructors, EXCEPT for when we are using the
+  // WIN32 DLL interface, in which case we can't hide them because Microsoft
+  // requires the copy constructors to implement subclassing...
   Fl_Widget & operator=(const Fl_Widget &) { return *this; }
   Fl_Widget(const Fl_Widget &) {}
-#  endif // WIN32 && !FL_DLL
+#  endif // !WIN32 || !FL_DLL
 
 protected:
 
@@ -217,5 +217,5 @@ public:
 #endif
 
 //
-// End of "$Id: Fl_Widget.H,v 1.6.2.4.2.21 2003/09/04 19:07:58 easysw Exp $".
+// End of "$Id: Fl_Widget.H,v 1.6.2.4.2.22 2004/04/06 18:37:20 easysw Exp $".
 //
